--- a/vue/code/change-rows-color/src/index.html
+++ b/vue/code/change-rows-color/src/index.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<!-- <script src="./index.js"></script> -->
-		<script src="../dist/main.js"></script>
+		<!-- <script src="../dist/main.js"></script> -->
+		<script src="/main.js"></script>
 	</head>
 	<body>
 		<ul>
@@ -20,5 +21,6 @@
 			<li>这是第8个li</li>
 			<li>这是第9个li</li>
 		</ul>
+		<img src="" alt="" class="box" />
 	</body>
 </html>
