--- a/JS/九九乘法表.html
+++ b/JS/九九乘法表.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <script>
-            var str = "";
-            for (var i = 1; i <= 9; i++) {
-                for (var j = 1; j <= i; j++) {
+            let str = "";
+            for (let i = 1; i <= 9; i++) {
+                for (let j = 1; j <= i; j++) {
                     str += j + "x" + i + "=" + i * j + "\t";
                 }
                 str += "\n";
